erDiagram
    direction LR
    USERS ||--o{ WALLETS : owns
    USERS ||--o{ IDEMPOTENCY_KEYS : owns
    USERS ||--o{ AUDIT_LOGS : records
    WALLETS ||--o{ TRANSACTIONS : records

    USERS {
        BIGSERIAL id PK
        TEXT email UK
        TEXT display_name
        CURRENCY_CODE base_currency_code
        TEXT password_hash
        BOOLEAN is_admin
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }

    WALLETS {
        BIGSERIAL id PK
        BIGINT user_id FK
        TEXT iban UK
        TEXT name
        CURRENCY_CODE currency_code
        DECIMAL initial_balance
        BOOLEAN is_archived
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }

    TRANSACTIONS {
        BIGSERIAL id PK
        BIGINT wallet_id FK
        TEXT transaction_type
        DECIMAL amount
        UUID transfer_reference
        TEXT description
        TIMESTAMPTZ occurred_at
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }

    IDEMPOTENCY_KEYS {
        BIGSERIAL id PK
        BIGINT user_id FK
        TEXT endpoint
        TEXT idempotency_key
        TEXT request_hash
        TEXT status
        INTEGER response_status_code
        JSONB response_body
        TIMESTAMPTZ expires_at
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }

    AUDIT_LOGS {
        BIGSERIAL id PK
        BIGINT user_id FK
        TEXT event_type
        TEXT status
        TEXT entity_type
        TEXT entity_id
        JSONB metadata
        TIMESTAMPTZ created_at
    }
